# chat-ontology-builder-backend

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: general.mdc
docs/: current_tasks.md  done_tasks.md  general PRD format.md  icebox.md
docs/design-docs/: Philosophical-Considerations-Category-Implementation.md
docs/product-requirements/Phase 1/: 01-Kantian-Category-Structure-KG.md  02-General-Logic-Module-IO-Logic.md  03-SHACL-Constraints-Categorical-Framework.md  04-Understanding-Module-API-Layer.md  05-Basic-Action-Sense-Layer-LLM.md  06-Concept-Transition-Pipeline.md  07-Neural-Symbolic-Bridge-Phase1.md  08-Chat-Integration-Service.md  Phase1Epic.md
docs/product-requirements/Phase 2/: Phase2Epic.md
foundation/: FullPaper.md  README.md
memory-bank/: activeContext.md  filesystem_overview.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: setup_database.py
scripts/cypher_statements/: category_structure_statements.py  concept_structure_statements.py  sample_concept_statements.py
src/: main.py
src/api/middleware/: validation.py
src/cypher_queries/: category_queries.py  concept_queries.py  relationship_queries.py  specialized_queries.py
src/db/: cypher_queries.py  neo4j_driver.py
src/models/: category.py  concept.py  path.py  relationship.py
src/services/: concept_service.py  relationship_service.py
src/understanding/: README.md
src/utils/: converters.py  cypher_loader.py
src/validation/: kantian_validator.py
tests/: conftest.py  test_kantian_validation.py  test_main.py
tests/integration/: test_category_endpoints.py  test_concept_endpoints.py  test_relationship_endpoints.py  test_validation_errors.py
(+14 files in other folders)
